--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,8 +18,8 @@
         <div class="container">
             <div id="copy-right">
 
-                {% if site.owner.twitter %}<a href="http://twitter.com/{{ site.owner.twitter }}" title="{{ site.owner.name}} on Twitter" target="_blank"  class="icon-twitter" ></a>{% endif %}
-                {% if site.owner.github %}<a href="http://github.com/{{ site.owner.github }}" title="{{ site.owner.name}} on Github" target="_blank"  class="icon-github"></a>{% endif %}
+                {% if site.owner.twitter %}<a href="http://twitter.com/{{ site.owner.twitter }}" title="{{ site.owner.name}} on Twitter" target="_blank"  class="icon-twitter-sign" ></a>{% endif %}
+                {% if site.owner.github %}<a href="http://github.com/{{ site.owner.github }}" title="{{ site.owner.name}} on Github" target="_blank"  class="icon-github-sign"></a>{% endif %}
 
             </div>
             <div id="copyright">&copy; 2013 QATools-Team <span
