--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,14 @@
 
 <script type="text/javascript" src="{{ site.url }}/assets/js/scripts.js"></script>
 
+<!--https://github.com/michael/github-->
+<script type="text/javascript" src="{{ site.url }}/assets/js/base64.js"></script>
+<script type="text/javascript" src="{{ site.url }}/assets/js/underscore-min.js"></script>
+<script type="text/javascript" src="{{ site.url }}/assets/js/github-api.js"></script>
+
 <!-- Webfonts -->
 <script src="//use.edgefonts.net/source-sans-pro:n2,i2,n3,i3,n4,i4,n6,i6,n7,i7,n9,i9;source-code-pro:n4,n7;volkhov.js"></script>
+
+
+
 
