--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -31,7 +31,10 @@
 </script>
 
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-<script type="text/javascript" src="{{site.url}}/assets/js/feeds.js">
-</script>
+<script type="text/javascript" src="{{site.url}}/assets/js/feeds.js"> </script>
+<script type="text/javascript" src="{{site.url}}/assets/js/github.js"> </script>
+
+
+
 
 
