--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,5 @@
 <!doctype html>
-<!--[if lt IE 7]>
-<html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="ru"> <![endif]-->
-<!--[if (IE 7)&!(IEMobile)]>
-<html class="no-js lt-ie9 lt-ie8" lang="ru"><![endif]-->
-<!--[if (IE 8)&!(IEMobile)]>
-<html class="no-js lt-ie9" lang="ru"><![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js" lang="en"><!--<![endif]-->
+<html lang="en">
 <head>
     {% include head.html %}
 </head>
