--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,24 +5,24 @@
 
 <title>{{page.title}}</title>
 
-<link rel="stylesheet" href="{{ site.url }}/assets/css/styles.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">
 
-<link rel="stylesheet" href="{{ site.url }}/assets/css/pigm-github.css">
-<link rel="stylesheet" href="{{ site.url }}/assets/css/hljs-github.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/pigm-github.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/hljs-github.css">
 
 <link href='http://fonts.googleapis.com/css?family=Roboto&subset=cyrillic,latin' rel='stylesheet' type='text/css'>
 
 
 <!-- Icons -->
 <!-- 16x16 -->
-<link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
+<link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
 <!-- 32x32 -->
-<link rel="shortcut icon" href="{{ site.url }}/favicon.png">
+<link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png">
 <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
-<link rel="apple-touch-icon-precomposed" href="{{ site.url }}/images/site-logo.png">
+<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/assets/img/logo.png">
 <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/images/site-logo.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.baseurl }}/assets/img/logo.png">
 <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/images/site-logo.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.baseurl }}/assets/img/logo.png">
 <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/images/site-logo.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/assets/img/logo.png">
